--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/10.16.6/sweetalert2.min.css" integrity="sha512-/D4S05MnQx/q7V0+15CCVZIeJcV+Z+ejL1ZgkAcXE1KZxTE4cYDvu+Fz+cQO9GopKrDzMNNgGK+dbuqza54jgw==" crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/77b7d0f569.js" crossorigin="anonymous"></script>
 </head>
@@ -16,72 +17,113 @@
 
 <body>
 
-    <navbar>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <!--
-                <a class="navbar-brand" href="#">BrainTech</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                -->
-                <a class="navbar-brand ps-5 pt-3 pb-3 pe-5" href="#">
-                    <img src="/img/logo-dark_2.png" alt="" width="150" height="33">
-                </a>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="index.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Home
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="index.html">Multipages</a></li>
-                                <li><a class="dropdown-item" href="index.html">Onepages</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Services
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="sevices.html">Software Developement</a></li>
-                                <li><a class="dropdown-item" href="sevices.html">Web Developement</a></li>
-                                <li><a class="dropdown-item" href="sevices.html">Analytic Solutions</a></li>
-                                <li><a class="dropdown-item" href="sevices.html">Cloud and DevOps</a></li>
-                                <li><a class="dropdown-item" href="sevices.html">Project Design</a></li>
-                                <li><a class="dropdown-item" href="sevices.html">Data Center</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Pages
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="pages.html">Services</a></li>
-                                <li><a class="dropdown-item" href="pages.html">Our Team</a></li>
-                                <li><a class="dropdown-item" href="pages.html">Single Team</a></li>
-                                <li><a class="dropdown-item" href="pages.html">Case Studies</a></li>
-                                <li><a class="dropdown-item" href="pages.html">Shop</a></li>
-                                <li><a class="dropdown-item" href="pages.html">Pricing</a></li>
-                                <li><a class="dropdown-item" href="pages.html">Faq</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Blog
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="blog.html">Blog</a></li>
-                                <li><a class="dropdown-item" href="blogdetails.html">Blog Details</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
-                        </li>
-                    </ul>
+
+
+    <navbar>
+        <!-- Topbar Area Start -->
+        <div class="topbar-area">
+            <div class="container">
+                <div class="row rs-vertical-middle">
+                    <div class="col-lg-2">
+                        <div class="logo-part">
+                            <a href="index.html" style="display: block; height: 30px;"><img src="img/logo-dark_2.png" alt=""></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-10 text-right">
+                        <ul class="rs-contact-info">
+                            <li class="contact-part">
+                                <i class="fa fa-map-marked-alt"></i>
+                                <span class="contact-info">
+                                    <span>Address</span> 05 kandi BR. New York
+                                </span>
+                            </li>
+                            <li class="contact-part">
+                                <i class="fa fa-envelope"></i>
+                                <span class="contact-info">
+                                    <span>E-mail</span>
+                                <a href="#"> support@merwusch.com</a>
+                                </span>
+                            </li>
+                            <li class="contact-part no-border">
+                                <i class="fa fa-phone"></i>
+                                <span class="contact-info">
+                                    <span>Phone</span> (123) 456 7890
+                                </span>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
+        </div>
+        <!-- Topbar Area End -->
+        <nav class="topnav">
+
+
+            <ul>
+
+                <li><a class="text-white active" href="index.html">Home <i class="fa fa-plus"></i></a>
+                    <ul class="sub-menu">
+                        <li><a class="text-dark" href="index.html">Multipages</a></li>
+                        <li><a class="text-dark" href="index.html">Onepages</a></li>
+                    </ul>
+
+
+                </li>
+
+                <li><a class="text-white" href="about.html">About</a></li>
+
+                <li><a class="text-white" href="services.html">Services <i class="fa fa-plus"></i></a>
+                    <ul class="sub-menu">
+                        <li><a class="text-dark" href="services.html">Software Developement</a></li>
+                        <li><a class="text-dark" href="services.html">Web Developement</a></li>
+                        <li><a class="text-dark" href="services.html">Analytic Solutions</a></li>
+                        <li><a class="text-dark" href="services.html">Cloud and DevOps</a></li>
+                        <li><a class="text-dark" href="services.html">Project Design</a></li>
+                        <li><a class="text-dark" href="services.html">Data Center</a></li>
+                    </ul>
+
+                </li>
+
+                <li><a class="text-white" href="pages.html">Pages <i class="fa fa-plus"></i></a>
+                    <ul class="sub-menu">
+                        <li><a class="text-dark" href="pages.html">Services</a></li>
+                        <li><a class="text-dark" href="pages.html">Our Team</a></li>
+                        <li><a class="text-dark" href="pages.html">Single Team</a></li>
+                        <li><a class="text-dark" href="pages.html">Case Studies</a></li>
+                        <li><a class="text-dark" href="pages.html">Shop</a></li>
+                        <li><a class="text-dark" href="pages.html">Pricing</a></li>
+                        <li><a class="text-dark" href="pages.html">Faq</a></li>
+                    </ul>
+
+                </li>
+
+                <li><a class="text-white" href="blog.html">Blog <i class="fa fa-plus"></i></a>
+                    <ul class="sub-menu">
+                        <li><a class="text-dark" href="blog.html">Blog</a></li>
+                        <li><a class="text-dark" href="blogdetails.html">Blog Details</a></li>
+                    </ul>
+
+
+                </li>
+
+                <li><a class="text-white" href="contact.html">Contact</a></li>
+
+                <li><a href="#"><i class="fa fa-search"></i> </a></li>
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+
+                <li>
+                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                        <i class="fa fa-bars"></i>
+                    </a>
+                </li>
+
+
+            </ul>
+
         </nav>
 
     </navbar>
@@ -230,6 +272,7 @@
                                         <!--website------------------------------------------------->
                                         <div class=" form-control ">
                                             <input id="website" type="url" name="url" class="" placeholder="Your Website">
+                                            <small></small>
                                         </div>
                                     </div>
 
@@ -313,8 +356,8 @@
     <div id=" map " class=" ">
         <div class=" row ">
 
-            <iframe src=" https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12055.767695752524!2d29.2127!3d40.93894!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2feb97ec0d7b915d!2sBing%C3%B6l%20Sitesi!5e0!3m2!1str!2str!4v1623870896232!5m2!1str!2str
-        " width=" map-width " height=" 500 " style=" border:0; " allowfullscreen=" " loading=" lazy "></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d58417.22536604188!2d90.422699!3d23.780287!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe26372e73a6832e7!2sRSTheme!5e0!3m2!1str!2sus!4v1625642175420!5m2!1str!2sus" width="600" height="450"
+                style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
 
     </div>
@@ -458,8 +501,8 @@
 
     </footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/10.16.6/sweetalert2.min.js" integrity="sha512-CrNI25BFwyQ47q3MiZbfATg0ZoG6zuNh2ANn/WjyqvN4ShWfwPeoCOi9pjmX4DoNioMQ5gPcphKKF+oVz3UjRw==" crossorigin="anonymous"></script>
     <script src="js/style.js"></script>
-    <script src="sweetalert2.all.min.js"></script>
 
 </body>
 
